# duckrun

./: .copilot-instructions.md  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  delta-scan-views-design.md  mkdocs.yml  optimize-delta-stats-plan (1).md  pyproject.toml  quick_test.py  test_signatures.py
.claude-plugin/: marketplace.json
.github/workflows/: aemo.yml  aemo_remote.yml  coffee-smoke.yml  coffee-stress.yml  concurrency-correctness.yml  concurrency.yml  conformance.yml  connection-card.yml  core.yml  cores.yml  deploy-docs.yml  deploy.yml  deploy_to_fabric.yml  fuzz.yml  integration.yml  integration_tests_iceberg.yml  integration_tests_onelake.yml  jaffle.yml  local_stress_tests.yml  makeopendata.yml  merge-snapshot-demo.yml  merge.yml  oidc-smoke.yml  parity.yml  parquet_layout.yml  parquet_layout_contoso.yml  publish.yml  pypi.yml  refresh-smoke.yml  snapshot-pin.yml  tests.yml  tpc_di.yml
docs/: api-reference.md  architecture.mmd  automatic-sort.md  build_site.py  conformance.md  connection-api.md  dbt-adapter.md  design_document.md  examples.md  experimental-optimize.md  experimental-sort.md  getting-started.md  index.md  limitations.md  merge-benchmark-history.md  merge-benchmark.md  multicatalog.html  multicatalog_dbt.html  overview.md  parity.md  parquet-layout.md  read-layout.md  remote.md  snapshot-isolation.md  snapshot-pin.md  snapshot-timeline.mmd  spark-delta-parity.md  taxi.html  tpch-benchmark-history.md  tpch.md  workspace.md
docs/site/: index.html  multicatalog.html  taxi.html
docs/stylesheets/: extra.css
downloaded_from_onelake/: employees.csv  metadata.json  test_report.txt
downloaded_from_onelake/reports/: monthly_summary.csv
duckrun/: __init__.py  _runtime.py  auth.py  core.py  delta_table.py  ducklake_metadata.py  fabric_remote.py  files.py  iceberg.py  lakehouse.py  notebook.py  rle.py  runner.py  semantic_model.py  session.py  sortkey.py  sqlwrite.py  stats.py  workspace.py  writer.py
hooks/: github_links.py
integration_tests/: dbt_project.yml  profiles.yml
integration_tests/coffee/: README.md  dbt_project.yml  test_coffee.py
integration_tests/macros/: get_csv_archive_path.sql  get_root_path.sql
integration_tests/makeopendata/: README.md
integration_tests/models/: orders_delta.sql  orders_incr.sql  schema.yml  sources.yml  stg_orders.sql
integration_tests/multicatalog/: demo_multicatalog.py  demo_multicatalog_dbt.py  test_multicatalog.py
integration_tests/scripts/: generate_calendar.py
integration_tests/sde_dbt_tutorial/: .gitignore  README.md
integration_tests/seeds/: raw_orders.csv
integration_tests/snapshot_pin/: snapshot_pin_card.py  test_snapshot_pin.py
integration_tests/taxi/: demo_taxi.py
integration_tests/tests/: assert_all_daily_files_processed_price.sql  assert_all_daily_files_processed_scada.sql  assert_all_today_files_processed_scada.sql  assert_summary_covers_all_scada_days.sql
jaffle_shop/: dbt_project.yml  profiles.yml
jaffle_shop/seeds/: raw_orders_increment.csv  raw_payments_increment.csv
jaffle_shop/tests/: assert_merge_inserted_new.sql  assert_merge_rowcount.sql  assert_merge_updated_existing.sql
parity_tests/jaffle_shop/: README.md  profiles.yml  run_parity.py
parity_tests/mrr/: README.md  profiles.yml  run_parity.py
parity_tests/sde/: README.md  profiles.yml  run_parity.py
parity_tests/techflow/: README.md  profiles.yml  run_parity.py
parity_tests/tuva/: README.md
parquet_layout_tests/: README.md  build_auto_sort.py  build_not_sorted.py  build_optimized.py  build_spark_variant.py  check_tables.py  deploy_config.yml  deploy_vorder.py  livy_vorder.py  render_report.py  render_summary.py  report.py  table_stats.py  xmla_compare.py
parquet_layout_tests/aemo_electricity_auto_sort.SemanticModel/: model.bim
parquet_layout_tests/aemo_electricity_optimized.SemanticModel/: .platform  model.bim
parquet_layout_tests/aemo_electricity_spark_novorder.SemanticModel/: .platform  model.bim
parquet_layout_tests/aemo_electricity_vorder.SemanticModel/: .platform  model.bim
parquet_layout_tests/aemo_electricity_vorder_base_notsorted.SemanticModel/: .platform  model.bim
parquet_layout_tests/aemo_electricity_vorder_base_sorted.SemanticModel/: .platform  model.bim
performance_test/merge_spill/: README.md
performance_test/tpch/: test_tpch.py  tpch_card.py
repro/: concurrency_correctness.py  merge_snapshot_safety.py  scan_pin_lost_update.py
tests/: README.md  basic.ipynb  basic.py  demo_usage.py  real_test.py  test_concurrency.py  test_concurrency_spark.py  test_download.py  test_merge_spill.py  test_new_methods.py  test_nfv.py  test_remote_secret_discovery.py  test_signatures.py  test_table_exists_guard.py
tests/adapter/: test_delete_insert_rewrite.py  test_discovery_dbt.py  test_merge_spill.py  test_multi_catalog.py  test_remote_secret_discovery.py  test_returning_rejected.py  test_review_fixes.py  test_runtime_versions.py  test_source_scan_sql.py  test_table_exists_guard.py
tests/aemo/: profiles.yml
tests/conformance/: _subclass.py  conftest.py  passing_baseline.txt  test_basic.py  test_constraints.py  test_grants.py  test_hooks.py  test_incremental.py  test_incremental_microbatch.py  test_misc.py  test_persist_docs.py  test_query_comment.py  test_seed.py  test_simple_snapshot.py  test_snapshot.py  test_unit_testing.py  test_unit_testing_incremental.py  test_utils.py
tests/conformance_slt/: README.md  duckrun_rw.py  duckrun_shim.py  run_all.py  runner.py  test_conformance_slt.py
tests/connection_api/: demo_taxi.py  public_api_baseline.txt  test_coffee.py  test_connection_api.py  test_convert_to_delta.py  test_create_dataframe.py  test_local_filesystem.py  test_method_matrix.py  test_public_api.py  test_sql_dml.py  test_sql_only.py
tests/correctness/: concurrency_correctness.py  duckrun_breaker.py  duckrun_onelake_breaker.py  test_correctness.py  test_snapshot_pinning.py
tests/dbt_unit_tests/: test_dbt_unit_tests.py
tools/: conformance_baseline.py  conformance_gate.py  conformance_summary.py  inject_readme.py  merge_tpch_bench.py
(+366 files in other folders)
