[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckrun"
version = "0.3.24"
description = "A dbt adapter that runs SQL in DuckDB and materializes to Delta Lake (delta_rs)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mim"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "dbt-duckdb>=1.8",
    # Cap dbt-core below 2.0: it's a breaking change (restructured packaging — `dbt.cli` moves,
    # the dbtRunner import path changes) that the adapter has not been ported to. Without this
    # direct pin, `pip install --pre` (or any pre-release resolution) pulls dbt-core 2.0 alphas
    # via dbt-duckdb's uncapped requirement, leaving a 1.x-adapters / 2.0-core Frankenstein that
    # fails at `from dbt.cli.main import dbtRunner`. Declared directly because we only depend on
    # dbt-core transitively, so the ceiling has to live here to bite.
    "dbt-core>=1.8,<2.0",
    # duckdb floor is 1.5.4 (a floor only, NOT a pin, and deliberately no upper cap): 1.5.4 is the
    # first stable build whose bundled duckdb-delta extension supports `delta_scan('...', version => N)`
    # (duckdb-delta #312) — the version-pinned read this project relies on to make the incremental
    # read and the write commit resolve at ONE Delta snapshot (single-snapshot MERGE parity; see the
    # staging-read pin in _delta_core.sql and merge_delta's read_version). duckdb is only ever used to
    # READ here, so any newer version is fine — the floor exists solely to get the version-pin support.
    # deltalake is pinned EXACTLY to 1.5.0 — a HARD requirement, not a preference: 1.5.0 is the first
    # release with the MERGE disk-spill config (max_spill_size) that engine.merge_delta relies on to
    # cap merge RAM and avoid OOM on large upserts, and every newer release so far breaks us — DELETE
    # is broken and OneLake support regresses. So pin exactly; do NOT float until upstream fixes land.
    "duckdb>=1.5.4",
    "deltalake==1.5.0",
    # The top-level connection API (duckrun.connect) discovers OneLake tables via the DFS REST
    # API directly; requests is otherwise only a transitive dbt dependency.
    "requests",
]

[project.optional-dependencies]
# Laptop OneLake auth for the connection API: acquire a storage token via Azure CLI / browser.
# Not needed inside a Fabric notebook (notebookutils supplies the token) or for s3/gcs/local.
local = ["azure-identity"]
# Test-only. pyarrow builds reusable Arrow fixtures; pandas is required by the DataFrame.toPandas()
# test (DuckDB .df() materializes a pandas DataFrame, so it needs pandas+numpy). Production duckrun
# stays pyarrow-/pandas-free — it streams DuckDB relations straight to deltalake.
test = ["pytest>=7", "pyarrow", "pandas"]
# Official dbt adapter conformance suite (dbt-labs/dbt-adapters). Subclassed in
# tests/conformance/ to run the standard adapter tests against duckrun.
conformance = ["pytest>=7", "pyarrow", "dbt-tests-adapter"]

[project.urls]
Homepage = "https://github.com/djouallah/duckrun"
Repository = "https://github.com/djouallah/duckrun"
Issues = "https://github.com/djouallah/duckrun/issues"

[tool.setuptools.packages.find]
# dbt uses PEP 420 namespace packages under dbt/adapters and dbt/include. `duckrun` is the
# top-level notebook/connection API (duckrun.connect) shipped in the same distribution.
include = ["dbt", "dbt.*", "duckrun", "duckrun.*"]
namespaces = true

[tool.setuptools.package-data]
"dbt.include.duckrun" = ["dbt_project.yml", "**/*.sql", "**/*.yml"]
