[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckrun"
version = "0.4.21"
description = "A dbt adapter that runs SQL in DuckDB and materializes to Delta Lake (delta_rs)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mim"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "dbt-duckdb>=1.8",
    # Cap dbt-core below 2.0: it's a breaking change (restructured packaging — `dbt.cli` moves,
    # the dbtRunner import path changes) that the adapter has not been ported to. Without this
    # direct pin, `pip install --pre` (or any pre-release resolution) pulls dbt-core 2.0 alphas
    # via dbt-duckdb's uncapped requirement, leaving a 1.x-adapters / 2.0-core Frankenstein that
    # fails at `from dbt.cli.main import dbtRunner`. Declared directly because we only depend on
    # dbt-core transitively, so the ceiling has to live here to bite.
    "dbt-core>=1.8,<2.0",
    # duckdb floor is 1.5.4 (a floor only, NOT a pin, and deliberately no upper cap): 1.5.4 is the
    # first stable build whose bundled duckdb-delta extension supports `delta_scan('...', version => N)`
    # (duckdb-delta #312) — the version-pinned read this project relies on to make the incremental
    # read and the write commit resolve at ONE Delta snapshot (single-snapshot MERGE parity; see the
    # staging-read pin in _delta_core.sql and merge_delta's read_version). duckdb is only ever used to
    # READ here, so any newer version is fine — the floor exists solely to get the version-pin support.
    # deltalake is pinned EXACTLY to 1.5.0 — a HARD requirement, not a preference: 1.5.0 is the first
    # release with the MERGE disk-spill config (max_spill_size) that engine.merge_delta relies on to
    # cap merge RAM and avoid OOM on large upserts, and every newer release so far breaks us — DELETE
    # is broken and OneLake support regresses. So pin exactly; do NOT float until upstream fixes land.
    "duckdb>=1.5.4",
    "deltalake==1.5.0",
    # The top-level connection API (duckrun.connect) discovers OneLake tables via the DFS REST
    # API directly; requests is otherwise only a transitive dbt dependency.
    "requests",
    # OneLake/Fabric auth is core, not an add-on: duckrun self-acquires a bearer token (GitHub OIDC
    # workload-identity / Azure CLI / interactive browser) whenever a profile or connect() call omits
    # one, so `pip install duckrun` just works against OneLake with no extra to remember. Adds only a
    # `cryptography` wheel (via msal) plus small pure-Python libs — no build step. Unused inside a
    # Fabric notebook (notebookutils supplies the token) and for local/s3/gcs stores.
    "azure-identity",
    # Loose-file transfer (conn.copy / download / list_files) rides obstore — the Python binding over
    # the same Rust object_store crate deltalake uses, so the storage_options we already forward to
    # delta-rs configure it verbatim (no per-backend auth, one code path for local/s3/gcs/az/OneLake).
    # Uploads stream from a file handle (multipart PUT), which the old DuckDB read_blob/COPY BLOB path
    # couldn't — it buffered each file whole in memory and OOM'd on multi-GB files. A single prebuilt
    # Rust wheel (~7 MB); a distinct compile from deltalake's object_store, so no shared-ABI pin risk.
    "obstore",
]

[project.optional-dependencies]
# Back-compat no-op: OneLake auth (azure-identity) is now a core dependency, so `duckrun[local]` is
# just `duckrun`. Kept so existing installs/docs that reference the extra don't error.
local = []
# Test-only. pyarrow builds reusable Arrow fixtures; pandas is required by the DataFrame.toPandas()
# test (DuckDB .df() materializes a pandas DataFrame, so it needs pandas+numpy). Production duckrun
# stays pyarrow-/pandas-free — it streams DuckDB relations straight to deltalake.
# pyarrow<25: 25.0.0 segfaults the exactly-pinned deltalake==1.5.0 in its native to_pyarrow_table
# (ABI mismatch — 24.0.0 is the last good one). Lift together with the deltalake pin, not before.
test = ["pytest>=7", "pyarrow<25", "pandas"]
# Official dbt adapter conformance suite (dbt-labs/dbt-adapters). Subclassed in
# tests/conformance/ to run the standard adapter tests against duckrun.
conformance = ["pytest>=7", "pyarrow<25", "dbt-tests-adapter"]

[project.urls]
Homepage = "https://github.com/djouallah/duckrun"
Repository = "https://github.com/djouallah/duckrun"
Issues = "https://github.com/djouallah/duckrun/issues"

[tool.setuptools.packages.find]
# dbt uses PEP 420 namespace packages under dbt/adapters and dbt/include. `duckrun` is the
# top-level notebook/connection API (duckrun.connect) shipped in the same distribution.
include = ["dbt", "dbt.*", "duckrun", "duckrun.*"]
namespaces = true

[tool.setuptools.package-data]
"dbt.include.duckrun" = ["dbt_project.yml", "**/*.sql", "**/*.yml"]
